deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apihut-server
spec:
  selector:
    app: apihut-server
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
