deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apihut
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
spec:
  tls:
    - hosts:
        - apihut.net
      secretName: apihut-tls
    - hosts:
        - docs.apihut.net
      secretName: apihut-docs-tls
  rules:
    - host: apihut.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: apihut-server
              servicePort: 80
#              service:
#                name: apihut-server
#                port:
#                  number: 80
          - path: /docs/*
            backend:
              serviceName: apihut-docs
              servicePort: 80

    - host: docs.apihut.net
      http:
        paths:
          - backend:
              serviceName: apihut-docs
              servicePort: 80
#              service:
#                name: apihut-docs
#                port:
#                  number: 80
            path: /
            pathType: Prefix
